// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createSignedAddProviderPayload > returns the correct payload 1`] = `
{
  "endpoint": {
    "extrinsic": "createSponsoredAccountWithDelegation",
    "pallet": "msa",
  },
  "payload": {
    "authorizedMsaId": 1,
    "expiration": 100,
    "schemaIds": [
      8,
      9,
      10,
      15,
    ],
  },
  "signature": {
    "algo": "SECP256K1",
    "encodedValue": "0x584322b9b1d988ba4ae457996a28cfcf3721ba3e7060aa8ddf315924234985fd14e1b84f0ab538c9eb36481e7cfd412fbcd7600831c405dbef361e87afbe94251b",
    "encoding": "base16",
  },
  "type": "addProvider",
}
`;

exports[`createSignedClaimHandlePayload > returns the correct payload 1`] = `
{
  "endpoint": {
    "extrinsic": "claimHandle",
    "pallet": "handles",
  },
  "payload": {
    "baseHandle": "Alice",
    "expiration": 100,
  },
  "signature": {
    "algo": "SECP256K1",
    "encodedValue": "0x6c6a34349c21810fa848f48d2ab97136b668c4643ef1bc9a2a46a538f42c4dd861570926653265c439026ecf275c61909a8bae356c1892cd1701cbf650b5b11c1b",
    "encoding": "base16",
  },
  "type": "claimHandle",
}
`;

exports[`createSignedGraphKeyPayload > returns the correct payload 1`] = `
{
  "endpoint": {
    "extrinsic": "applyItemActionsWithSignatureV2",
    "pallet": "statefulStorage",
  },
  "payload": {
    "actions": [
      {
        "payloadHex": "0x40a6836ea489047852d3f0297f8fe8ad6779793af4e9c6274c230c207b9b825026",
        "type": "addItem",
      },
    ],
    "expiration": 100,
    "schemaId": 7,
    "targetHash": 0,
  },
  "signature": {
    "algo": "SECP256K1",
    "encodedValue": "0xa90f53294466f6531e7e5e3a833497e613270ac97d0eb3ec1bff25bebc2ca6ff1cef743402012a5fbd1488ce1f6e077dc760721be8f9d46a74d9a5f30986696a1c",
    "encoding": "base16",
  },
  "type": "itemActions",
}
`;
